--- a/sedan.html
+++ b/sedan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>CarForYou - Responsive Car Dealer HTML5 Template</title>
+    <title>Sedan</title>
     <!--Bootstrap -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
     <!--Custome Style -->
@@ -160,12 +160,32 @@
                                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                             </ul>
                         </div>
-                        <a href="#"><img src="assets/images/fleet/1.png" class="img-fluid" alt="image"></a>
+                        <a href="#"><img src="assets/images/fleet/2.png" class="img-fluid" alt="image"></a>
                     </div>
                     <div class="blog-content">
-                        <h5><a href="#">Luxury Sedan:3 passengers</a></h5>
-                        <p>Classic black Sedans are reliable, dependable and comfortable.
-                            These late-model Town Cars…</p>
+                        <h5><a href="#">Midsize Sedan:4 passengers</a></h5>
+                        <p>For groups of 4 or groups with a bit of extra luggage,
+                            our affordable and efficient yet spacious midsize SUV…</p>
+                    </div>
+                </article>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <article class="blog-list">
+                    <div class="blog-info-box">
+                        <div class="share_article">
+                            <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                        <a href="#"><img src="assets/images/fleet/3.png" class="img-fluid" alt="image"></a>
+                    </div>
+                    <div class="blog-content">
+                        <h5><a href="#">Luxury Sedan:6 passengers</a></h5>
+                        <p>Great for winter weather conditions, passengers that want extra space,
+                            or tremendous luggage capacity…</p>
                     </div>
                 </article>
             </div>
