--- a/sedan.html
+++ b/sedan.html
@@ -146,12 +146,12 @@
 <section class="section-padding">
     <div class="container">
         <div class="section-header text-center">
-            <h2>Sedan</h2>
+            <h2>Luxury Sedans</h2>
         </div>
         <div class="row">
             <div class="col-md-4 col-sm-4">
                 <article class="blog-list">
-                    <div class="blog-info-box">
+                    <div class="blog-info-box shadow">
                         <div class="share_article">
                             <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
                             <ul>
@@ -160,18 +160,22 @@
                                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                             </ul>
                         </div>
-                        <a href="#"><img src="assets/images/fleet/2.png" class="img-fluid" alt="image"></a>
+                        <a href="#"><img src="assets/images/sedan/luxery_sedan.png" class="img-fluid" alt="image"></a>
                     </div>
-                    <div class="blog-content">
-                        <h5><a href="#">Midsize Sedan:4 passengers</a></h5>
-                        <p>For groups of 4 or groups with a bit of extra luggage,
-                            our affordable and efficient yet spacious midsize SUV…</p>
+                    <div class="blog-content text-center">
+                        <h5><a href="#"> Luxury Town car up to 3 Passengers Luggage 3 suitcases</a></h5>
+                        <p class="fw-bold"><i class="fa fa-users text-primary" aria-hidden="true"></i> Seats: 3</p>
+                        <p class="fw-bold"><i class="fa fa-suitcase text-primary" aria-hidden="true"></i> Luggage: 3</p>
+                        <p class="fw-bold"><i class="fa fa-wifi text-primary" aria-hidden="true"></i> Amenities: WiFi</p>
+                        <p class="fw-bold"><i class="fa fa-tint text-primary" aria-hidden="true"></i> Refreshments: Water</p>
+                        <a href="quote-reservation.html" class="btn">Book Now<i class="fa fa-chevron-circle-right"
+                                                            aria-hidden="true"></i></a>
                     </div>
                 </article>
             </div>
             <div class="col-md-4 col-sm-4">
                 <article class="blog-list">
-                    <div class="blog-info-box">
+                    <div class="blog-info-box shadow">
                         <div class="share_article">
                             <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
                             <ul>
@@ -180,12 +184,40 @@
                                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                             </ul>
                         </div>
-                        <a href="#"><img src="assets/images/fleet/3.png" class="img-fluid" alt="image"></a>
+                        <a href="#"><img src="assets/images/sedan/luxery_mkt.png" class="img-fluid" alt="image"></a>
                     </div>
-                    <div class="blog-content">
-                        <h5><a href="#">Luxury Sedan:6 passengers</a></h5>
-                        <p>Great for winter weather conditions, passengers that want extra space,
-                            or tremendous luggage capacity…</p>
+                    <div class="blog-content text-center">
+                        <h5><a href="#"> Luxury MKT up to 3 Passengers Luggage 3 Suitcases</a></h5>
+                        <p class="fw-bold"><i class="fa fa-users text-primary" aria-hidden="true"></i> Seats: 3</p>
+                        <p class="fw-bold"><i class="fa fa-suitcase text-primary" aria-hidden="true"></i> Luggage: 3</p>
+                        <p class="fw-bold"><i class="fa fa-wifi text-primary" aria-hidden="true"></i> Amenities: WiFi</p>
+                        <p class="fw-bold"><i class="fa fa-tint text-primary" aria-hidden="true"></i> Refreshments: Water</p>
+                        <a href="quote-reservation.html" class="btn">Book Now<i class="fa fa-chevron-circle-right"
+                                                                                aria-hidden="true"></i></a>
+                    </div>
+                </article>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <article class="blog-list">
+                    <div class="blog-info-box shadow">
+                        <div class="share_article">
+                            <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                        <a href="#"><img src="assets/images/sedan/mid_size_suv.png" class="img-fluid" alt="image"></a>
+                    </div>
+                    <div class="blog-content text-center">
+                        <h5><a href="#"> Midsize SUV Up to 4 passengers Luggage 4 Suitcases</a></h5>
+                        <p class="fw-bold"><i class="fa fa-users text-primary" aria-hidden="true"></i> Seats: 4</p>
+                        <p class="fw-bold"><i class="fa fa-suitcase text-primary" aria-hidden="true"></i> Luggage: 4</p>
+                        <p class="fw-bold"><i class="fa fa-wifi text-primary" aria-hidden="true"></i> Amenities: WiFi</p>
+                        <p class="fw-bold"><i class="fa fa-tint text-primary" aria-hidden="true"></i> Refreshments: Water</p>
+                        <a href="quote-reservation.html" class="btn">Book Now<i class="fa fa-chevron-circle-right"
+                                                                                aria-hidden="true"></i></a>
                     </div>
                 </article>
             </div>
