--- a/suv.html
+++ b/suv.html
@@ -146,12 +146,12 @@
 <section class="section-padding">
     <div class="container">
         <div class="section-header text-center">
-            <h2>Suvs</h2>
+            <h2>LUXURY SUV’S</h2>
         </div>
         <div class="row">
             <div class="col-md-4 col-sm-4">
                 <article class="blog-list">
-                    <div class="blog-info-box">
+                    <div class="blog-info-box shadow">
                         <div class="share_article">
                             <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
                             <ul>
@@ -160,12 +160,64 @@
                                 <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                             </ul>
                         </div>
-                        <a href="#"><img src="assets/images/fleet/1.png" class="img-fluid" alt="image"></a>
+                        <a href="#"><img src="assets/images/suv/luxery_suv.png" class="img-fluid" alt="image"></a>
                     </div>
-                    <div class="blog-content">
-                        <h5><a href="#">Luxury SUV:3 passengers</a></h5>
-                        <p>Classic black Sedans are reliable, dependable and comfortable.
-                            These late-model Town Cars…</p>
+                    <div class="blog-content text-center">
+                        <h5><a href="#"> CHEVROLET SUBURBAN Up to 6 Passengers Luggage 6 Suitcases</a></h5>
+                        <p class="fw-bold"><i class="fa fa-users text-primary" aria-hidden="true"></i> Seats: 6</p>
+                        <p class="fw-bold"><i class="fa fa-suitcase text-primary" aria-hidden="true"></i> Luggage: 6</p>
+                        <p class="fw-bold"><i class="fa fa-wifi text-primary" aria-hidden="true"></i> Amenities: WiFi</p>
+                        <p class="fw-bold"><i class="fa fa-tint text-primary" aria-hidden="true"></i> Refreshments: Water</p>
+                        <a href="quote-reservation.html" class="btn">Book Now<i class="fa fa-chevron-circle-right"
+                                                                                aria-hidden="true"></i></a>
+                    </div>
+                </article>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <article class="blog-list">
+                    <div class="blog-info-box shadow">
+                        <div class="share_article">
+                            <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                        <a href="#"><img src="assets/images/suv/CHEVROLET_SUBURBAN.png" class="img-fluid" alt="image"></a>
+                    </div>
+                    <div class="blog-content text-center">
+                        <h5><a href="#"> Luxury GMC Yukon Up to 7 Passengers Luggage 6 Suitcases</a></h5>
+                        <p class="fw-bold"><i class="fa fa-users text-primary" aria-hidden="true"></i> Seats: 7</p>
+                        <p class="fw-bold"><i class="fa fa-suitcase text-primary" aria-hidden="true"></i> Luggage: 6</p>
+                        <p class="fw-bold"><i class="fa fa-wifi text-primary" aria-hidden="true"></i> Amenities: WiFi</p>
+                        <p class="fw-bold"><i class="fa fa-tint text-primary" aria-hidden="true"></i> Refreshments: Water</p>
+                        <a href="quote-reservation.html" class="btn">Book Now<i class="fa fa-chevron-circle-right"
+                                                                                aria-hidden="true"></i></a>
+                    </div>
+                </article>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <article class="blog-list">
+                    <div class="blog-info-box shadow">
+                        <div class="share_article">
+                            <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                        <a href="#"><img src="assets/images/suv/Luxury_Ford.png" class="img-fluid" alt="image"></a>
+                    </div>
+                    <div class="blog-content text-center">
+                        <h5><a href="#"> Luxury Ford Expedition Up to 6 Passengers Luggage 6 Suitcases</a></h5>
+                        <p class="fw-bold"><i class="fa fa-users text-primary" aria-hidden="true"></i> Seats: 6</p>
+                        <p class="fw-bold"><i class="fa fa-suitcase text-primary" aria-hidden="true"></i> Luggage: 6</p>
+                        <p class="fw-bold"><i class="fa fa-wifi text-primary" aria-hidden="true"></i> Amenities: WiFi</p>
+                        <p class="fw-bold"><i class="fa fa-tint text-primary" aria-hidden="true"></i> Refreshments: Water</p>
+                        <a href="quote-reservation.html" class="btn">Book Now<i class="fa fa-chevron-circle-right"
+                                                                                aria-hidden="true"></i></a>
                     </div>
                 </article>
             </div>
