--- a/index.html
+++ b/index.html
@@ -276,7 +276,6 @@
                     </div>
                     <p>Do you need an affordable Long Island limo service or Long Island car service? How about a car
                         service to JFK airport</p>
-                    <a href="#">More Info</a>
                 </div>
             </div>
 
@@ -289,7 +288,6 @@
                     </div>
                     <p>We can pick you up anywhere in the New York City (NYC) area and drop you off at any
                         destination.</p>
-                    <a href="#">More Info</a>
                 </div>
             </div>
 
@@ -302,7 +300,6 @@
                     </div>
                     <p>Reliability and luxury should not be compromised when you make a decision on which NYC area car
                         service or limo</p>
-                    <a href="#">More Info</a>
                 </div>
             </div>
 
@@ -315,7 +312,6 @@
                     </div>
                     <p>Here at LI Access Limo, we bring you top notch / reliable service at prices anyone can
                         afford!</p>
-                    <a href="#">More Info</a>
                 </div>
             </div>
         </div>
@@ -336,9 +332,7 @@
                     <div class="looking-car-content">
                         <h3>Limos,Black Cars, SUVs</h3>
                         <p>airport Access limo is the most trusted Long Island airport car service company. We strive to meet each customer’s need independently,
-                            With prompt and courteous service.</p>
-                        <a href="#" class="btn">More Info<i class="fa fa-chevron-circle-right"
-                                                            aria-hidden="true"></i></a></div>
+                            With prompt and courteous service.</p></div>
                 </div>
             </div>
             <div class="col-lg-6 col-sm-6">
@@ -348,8 +342,6 @@
                         <h3>Tristate Coverage</h3>
                         <p>Whether you’re booking airport transportation. a night out on the town ,
                             From the moment you book your reservation, you can rest assured you won’t have to worry about getting to your destination.</p>
-                        <a href="#" class="btn">More Info<i class="fa fa-chevron-circle-right"
-                                                            aria-hidden="true"></i></a></div>
                 </div>
             </div>
         </div>
