--- a/reservations.html
+++ b/reservations.html
@@ -133,78 +133,13 @@
 <section class="mb-5">
   <div class="container mt-5 mb-5">
     <div class="main_bg white-text">
-      <!--<div class="row">
-          <div class="col-lg-6">
-              <h3>Request a quote/ make a reservation</h3>
-              <h6>10% off when you get an online quote - Convenient payment options!</h6>
-          </div>
-          <div class="col-lg-6" align="right">
-              <img src="assets/card-image/Untitled-3.png" class="img-fluid"/>
-          </div>
-      </div>
-      <form action="#" method="get">
-          <div class="row">
-              <div class="form-group col-md-3 col-sm-6">
-                  <label>Trip type:</label>
-                  <div class="select">
-                      <select class="form-control">
-                          <option value="one_way_to_airport">One-way TO Airport</option>
-                          <option value="one_way_from_airport">One-way FROM Airport</option>
-                          <option value="round_trip_airport">Round trip involving Airport</option>
-                          <option value="one_way_no_airport">One-way trip NOT involving Airport</option>
-                          <option value="round_trip_no_airport">Round trip NOT involving Airport</option>
-                          <option value="hourly">Hourly/multi-stop/tours</option>
-                      </select>
-                  </div>
-              </div>
-              <div class="form-group col-md-3 col-sm-6">
-                  <label>Pickup:</label>
-                  <div class="select">
-                      <select class="form-control">
-                          <option value="NY">New York</option>
-                          <option value="NJ">New Jersey</option>
-                          <option value="CT">Connecticut</option>
-                      </select>
-                  </div>
-              </div>
-              <div class="form-group col-md-3 col-sm-6">
-                  <label>Dropoff: </label>
-                  <div class="select">
-                      <select class="form-control">
-                          <option value="JFK - New York JFK International Airport" selected="selected">JFK - NY
-                              JFK Int'l Airport
-                          </option>
-                          <option value="LGA - New York La Guardia Airport">LGA - New York La Guardia Airport
-                          </option>
-                          <option value="EWR - Newark International Airport">EWR - Newark International Airport
-                          </option>
-                          <option value="ISP - Long Island Islip Macarthur Airport">ISP - Long Island Islip
-                              Macarthur Airport
-                          </option>
-                          <option value="FRG - Republic Airport Farmingdale NY">FRG - Republic Airport Farmingdale
-                              NY
-                          </option>
-                          <option value="HPN - Westchester County Airport">HPN - Westchester County Airport
-                          </option>
-                          <option value="TEB - Teterboro, NJ Airport">TEB - Teterboro, NJ Airport</option>
-                      </select>
-                  </div>
-              </div>
-              <div class="form-group col-md-3 col-sm-6">
-                  <label></label>
-                  <button type="submit" class="btn btn-block">Continue <i class="fa fa-arrow-right"
-                                                                          aria-hidden="true"></i></button>
-              </div>
-          </div>
-      </form>-->
-
       <div class="row">
         <div class="col-lg-12">
           <h3>Please fill out this form to get a Quote for your One-way trip from New York NY to JFK - New
             York JFK International Airport.</h3>
         </div>
       </div>
-      <form action="#" method="get">
+      <form action="#" method="post">
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
             <label>What type of Vehicle are you interested in reserving?</label>
