--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <div class="row">
             <div class="col-lg-6 col-sm-6">
                 <div class="looking-car">
-                    <div class="looking-cat-image mt-5"><img src="assets/images/car/1.png" alt="Image"></div>
+                    <!--<div class="looking-cat-image mt-5"><img src="assets/images/car/1.png" alt="Image"></div>-->
                     <div class="looking-car-content">
                         <h3>Limos,Black Cars, SUVs</h3>
                         <p>airport Access limo is the most trusted Long Island airport car service company. We strive to meet each customer’s need independently,
@@ -337,7 +337,7 @@
             </div>
             <div class="col-lg-6 col-sm-6">
                 <div class="looking-car">
-                    <div class="looking-cat-image mt-5"><img src="assets/images/car/2.png" alt="Image"></div>
+                    <!--<div class="looking-cat-image mt-5"><img src="assets/images/car/2.png" alt="Image"></div>-->
                     <div class="looking-car-content">
                         <h3>Tristate Coverage</h3>
                         <p>Whether you’re booking airport transportation. a night out on the town ,
